--- a/.prettierrc
+++ b/.prettierrc
@@ -8,6 +8,7 @@
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
   "proseWrap": "never",
-  "htmlWhitespaceSensitivity": "strict",
-  "endOfLine": "lf"
+  "htmlWhitespaceSensitivity": "ignore",
+  "endOfLine": "lf",
+  "printWidth": 9999
 }
